[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/ba√∫.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bau/Bau.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 71.6602

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.8144, 8.6596 )

[node name="Bau" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Range_abrir" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range_abrir"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -13.2108
margin_top = -23.8541
margin_right = 19.7892
margin_bottom = -9.85406
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = -23.0
margin_top = 11.0
margin_right = 22.0
margin_bottom = 25.0
text = "[space]"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Range_abrir" to="." method="_on_Range_abrir_body_entered"]
[connection signal="body_exited" from="Range_abrir" to="." method="_on_Range_abrir_body_exited"]
